--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -317,7 +317,7 @@ Viene aggregata dalla classe \textit{FigureSet}.
 \item[-]  \textit{isSelected()} dice se la figura \`e correntemente selezionata. Ritorna \textit{{\_}selected}.
 \item[-]  \textit{eachProperty(fn)} applica la funzione fn ad ogni propriet\`a della figura, ovvero a \textit{{\_}bounds} e \textit{{\_}borderColour}.
 \item[-] \textit{drawSelection(canvas)} disegna dei quadratini di colore blu e con opacit\`a 0.8 intorno ai punti principali della figura, ottenuti tramite \textit{getMainPoints}e traccia i bordi del \textit{BoundingRectangle} di colore grigio con opacit\`a 0.8, solo se la figura \`e selezionata. 
-\item[-] \textit{clone()} metodo che propone sul canvas una copia dell'originale con l'ausilio del metodo \textit{draw(canvas)}; il clone dell'originale viene disegnato sopra spostato 10px verso l'alto.  
+\item[-] \textit{clone(figure)} Riceve tutte le propriet\`a della figura selezionata passate dal parametro attuale \textit{figure}; invoca il metodo \textit{getMainPoints} da cui preleva i vertici della figura. Costruisce e ritorna una figura clone dell' originale le cui coordinate sul canvas sono spostate di 10px in relazione alla posizione della figura di partenza.
 \end{elencopuntato}
 
 \subsezione{FigureSet}
@@ -419,6 +419,7 @@ Implementa \textit{Property}.
 \end{elencopuntato}
 \paragraph{Metodi pubblici:}
 \begin{elencopuntato}[\normindent]
+\item[-] \textit{setAngle} setta l'angolo di rotazione \textit{\_rad}.
 \item[-] \textit{transformPoints} effettua una trasformazione sulla figura selezionata nel canvas, ritorna la modifica dei vertici della figura ottenuti attraverso il metodo\textit{getMainPoints}; la figura viene ridisegnata con l'ausilio del metodo \textit{draw(canvas)}. 
 \item[-] \textit{createWidget} crea e ritorna un'istanza di \textit{RotationSetter} passando se stesso come parametro al costruttore.
 \end{elencopuntato}
