correzione lessicale classe canvas

--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -263,7 +263,7 @@ Compone un'istanza di \textit{Visualization}, che si occupa della sua visualizza
 \paragrafo{Metodi pubblici:}
 \begin{elencopuntato}[\normindent]
 \item[-] \textit{getId()} ritorna  \textit{{\_}id};
-\item[-] \textit{clear()} cancella tutte le figure disegnate sul canvas, seguendo un criterio scritto nella bozza del standard W3C, il quale prevede che la riassegnazione di uno degli attributi dimensionali del canvas comporta la cancellazione del suo contenuto e il ritorno allo stato iniziale con le nuove dimensioni;
+\item[-] \textit{clear()} cancella tutte le figure disegnate sul canvas, seguendo un criterio scritto nella bozza dello standard W3C, il quale prevede che la riassegnazione di uno degli attributi dimensionali del canvas comporta la cancellazione del suo contenuto e il ritorno allo stato iniziale con le nuove dimensioni;
 \item[-] \textit{getHeight()} ritorna  \textit{{\_}height};
 \item[-] \textit{getWidth()} ritorna  \textit{{\_}width};
 \item[-] \textit{setHeight(val)} modifica \textit{{\_}height};
