--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -455,6 +455,25 @@ Estende \textit{Button}.
 \item[-]  \textit{bindCanvas(toolbar,canvas,canvasObj,visual,figureSet,borderColor)} overriding del metodo ereditato da \textit{Button}, collega il canvas all'azione di disegno di una linea a mano libera.
 \end{elencopuntato}
 
+\subsezione{CloneButton}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Classe concreta che rappresenta lo specifico pulsante che attiva le funzionalit\` a di clonazione di una figura.
+\subsubsezione{Relazioni d'uso di altre componenti}
+Estende \textit{Button}.
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+\subsubsezione{Attivit\`a svolte e dati trattati}
+\textit{Page} e \textit{Toolbar} ne mantengono un' istanza.
+\paragrafo{Attributi privati:}
+\begin{elencopuntato}[\normindent]
+\item[-] \textit{{\_}id} l'attibuto HTML \textit{id} del pulsante.
+\end{elencopuntato}
+\paragrafo{Metodi pubblici:}
+\begin{elencopuntato}[\normindent]
+\item[-] \textit{getId()} ritorna \textit{{\_}id};
+\item[-] \textit{getBuilder()} ritorna il tipo di oggetto disegnato tramite la pressione di questo pulsante, per permetterne il riconoscimento al metodo \textit{bindCanvas} in modo da associare correttamente la figura da disegnare al suo pulsante.
+\item[-]  \textit{bindCanvas(toolbar,canvas,canvasObj,visual,figureSet,borderColor)} overriding del metodo ereditato da \textit{Button}, collega il canvas all'azione di clonazione di una figura.
+\end{elencopuntato}
+
 \subsezione{TextButton}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
 Classe concreta che rappresenta lo specifico pulsante che attiva le funzionalit\` a di disegno di una linea a mano libera.
